--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div class="container">
-            <div class="row justify-center">
+            <div class="row">
                 <div class="col-33"></div>    
                 <div class="col-33"></div>    
                 <div class="col-33"></div>    
