[UPD] created layout in footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <div class="container">
+        <div class="container py-80">
             <div class="row">
                 <div class="col-33"></div>    
                 <div class="col-33"></div>    
@@ -48,5 +48,15 @@
             </div>
         </div> 
     </main>
+    <footer class="py-20">
+        <div class="container">
+            <div class="row">
+                <div class="col-25 bg-blue py-20"></div>
+                <div class="col-50 bg-gold py-20"></div>
+                <div class="col-25 bg-blue py-20"></div>
+            </div>
+        </div>
+        
+    </footer>
 </body>
 </html>
