[UPD] fix col-33 in main and fix height of main. Add header and header height. fix height of footers.

--- a/index.html
+++ b/index.html
@@ -7,51 +7,193 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header>
+
+    </header>
     <main>
-        <div class="container py-80">
+        <div class="container">
             <div class="row">
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>  
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>  
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>  
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>  
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>    
-                <div class="col-33"></div>  
-            </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/360_F_225947759_pmDnMV6kaAzKBIAel4o6s4eqN76D6nim.jpg" alt="">
+                    </div>
+                </div>    
         </div> 
     </main>
     <footer class="py-20">
         <div class="container">
             <div class="row">
-                <div class="col-25 bg-blue py-20"></div>
+                <div class="col-25 bg-blue "></div>
                 <div class="col-50 bg-gold py-20"></div>
                 <div class="col-25 bg-blue py-20"></div>
             </div>
